# prometheus-4-piezas

./: .gitignore  CLAUDE.md  DEMO.md  README.md  guion-prometheus-4-piezas.md  slides.md
.github/workflows/: desplegar-k8s.yml  pokeapi-imagen.yml
k8s/: 00-namespace.yaml  10-node-exporter.yaml  20-prometheus-config.yaml  22-prometheus.yaml  30-alertmanager.yaml  40-grafana.yaml  50-sample-app.yaml  60-pokeapi.yaml  README.md  conectar-usuarios.sh  generar-carga.sh  montar-charla.sh  port-forward.sh  reiniciar-pokeapi.sh
pokeapi/: .dockerignore  .env.ejemplo  .gitignore  Cargo.toml  Dockerfile  README.md  USO-IMAGEN.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
pokeapi/apps/backend/: Cargo.toml
pokeapi/apps/backend/src/: app.rs  clientes.rs  composicion.rs  configuracion.rs  http.rs  lib.rs  main.rs  mensajeria.rs  metricas.rs  persistencia.rs  seguridad.rs  sesion.rs
pokeapi/apps/backend/src/app/: admin.rs  api.rs  dashboard.rs  login.rs  modelos.rs  registro.rs
pokeapi/apps/backend/src/clientes/: pokeapi.rs
pokeapi/apps/backend/src/http/: identidad.rs  observabilidad.rs  pokedex.rs
pokeapi/apps/backend/src/mensajeria/: identidad_eventos.rs  pokedex_eventos.rs
pokeapi/apps/backend/src/persistencia/: identidad_mongo.rs  identidad_redis.rs  pokedex_redis.rs
pokeapi/apps/backend/style/: main.css
pokeapi/crates/bc-identidad/: Cargo.toml
pokeapi/crates/bc-identidad/src/: aplicacion.rs  dominio.rs  lib.rs
pokeapi/crates/bc-identidad/src/aplicacion/: casos_uso.rs  dto.rs  puertos.rs
pokeapi/crates/bc-identidad/src/dominio/: errores.rs  eventos.rs  modelo.rs  repositorio.rs
pokeapi/crates/bc-pokedex/: Cargo.toml
pokeapi/crates/bc-pokedex/src/: aplicacion.rs  dominio.rs  lib.rs
pokeapi/crates/bc-pokedex/src/aplicacion/: casos_uso.rs  dto.rs  puertos.rs
pokeapi/crates/bc-pokedex/src/dominio/: errores.rs  eventos.rs  modelo.rs  repositorio.rs
pokeapi/crates/shared-kernel/: Cargo.toml
pokeapi/crates/shared-kernel/src/: errores.rs  lib.rs
slides-typst/: Makefile  README.md  gen-qr.sh  slides.typ  theme.typ
slides-typst/slides/: 01-portada.typ  02-madrugada.typ  02-qr-app.typ  03-cuatro-piezas.typ  03-qr-prometheus.typ  04-qr-grafana.typ  05-la-app.typ  05-pieza2-servidor.typ  06-cable.typ  06-cuatro-piezas.typ  07-pieza1-exporters.typ  09-promql-app.typ  10-cable.typ  11-alertas-app.typ  11-pieza3-promql.typ  12-recap.typ  13-pieza4-alertmanager.typ  15-para-seguir.typ  16-demo-entra.typ  17-demo-recorrido.typ  19-cierre.typ
