[workspace]
resolver = "3"
members = [
    "crates/shared-kernel",
    "crates/bc-*",
    "apps/backend",
]

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "MIT"

[workspace.dependencies]
# Web, runtime y clientes — solo se usan en el binario (apps/backend).
tokio = { version = "1.52", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
leptos = "0.8.20"
leptos_axum = "0.8.10"
leptos_meta = "0.8.6"
leptos_router = "0.8.14"
redis = { version = "1.3", features = ["tokio-rustls-comp", "connection-manager"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "webpki-roots", "http2", "json"] }
prometheus = "0.14"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std", "getrandom"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# Transversales — pueden usarse desde los BCs.
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

# Solo binario.
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Perfil para el artefacto wasm de hidratación (lo usa cargo-leptos en release).
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
