[package]
name = "bc-identidad"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints.rust]
unsafe_code = "forbid"

# Bounded Context identidad: usuarios, credenciales, roles y sesiones.
#
# Reglas de dependencia:
#  - SÍ:  shared-kernel, async-trait, thiserror, chrono, serde.
#  - NO:  tokio, axum, redis, reqwest, argon2, ningún cliente concreto.
#
# Si necesitas IO o criptografía aquí, define un trait (puerto) y deja que el
# binario lo implemente.
[dependencies]
shared-kernel = { path = "../shared-kernel" }
async-trait.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde.workspace = true
